# mikannet

./: .env.example  .gitattributes  .gitignore  CONTEXT.md  DEPLOY.md  README-WIN.md  README.md  deploy-win.bat  deploy.bat  deploy.sh  docker-compose.local.yml  docker-compose.release.yml  docker-compose.yml
backend/: pyproject.toml
backend/app/: _version.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py
backend/app/api/: backup.py  bangumi.py  bd.py  config.py  discover.py  files.py  import_mikan.py  launch.py  logs.py  notifications.py  search.py  setup.py  subscriptions.py  system.py  tasks.py  ws.py
backend/app/clients/: anidb.py  anidb_search.py  bencode.py  bgmtv.py  bitcomet.py  downloader.py  http.py  llm.py  mikan.py  qbittorrent.py  sources.py  tmdb.py
backend/app/notifiers/: base.py  pushplus.py  serverchan.py  telegram.py
backend/app/parsers/: mikan_html.py  title_parser.py
backend/app/services/: anidb_service.py  auto_best.py  backup.py  bd_scan.py  bgm_sync.py  docker_api.py  download_tracker.py  events.py  launch.py  library_scan.py  lifecycle.py  local_import.py  logbuf.py  media_probe.py  metadata_service.py  mikan_full_import.py  organize.py  phase.py  postprocess.py  rss_engine.py  scrape.py  settings_service.py  storage.py  update_gate.py  updater.py
backend/tests/: test_bd_features.py  test_bgm_sync.py  test_config_shim.py  test_mikan_cookie.py  test_mikan_html.py  test_organize.py  test_phase.py  test_rss_engine.py  test_storage.py  test_title_parser.py  test_updater.py  test_wrapper.py
docker/: app.Dockerfile  (+2 more)
(+68 files in other folders)
